--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<description>Projeto Hackaton Nasa Space Apps Challenge</description>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 		<modelmapper.version>2.3.0</modelmapper.version>
 	</properties>
 
@@ -91,12 +91,22 @@
 
 	</dependencies>
 
-	<build>
+		<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>8</source>
+					<target>8</target>	
+					<failOnError>false</failOnError>
+					<generatedSourcesDirectory>src/main/java</generatedSourcesDirectory>	
+				</configuration>
+			</plugin>
+			
 		</plugins>
 	</build>
 
