--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,6 +2,7 @@
 spring.data.mongodb.uri=mongodb+srv://admin:adminadmin@cluster0.5oigr.gcp.mongodb.net/nasa-space-apps-challenge?retryWrites=true&w=majority
 
 spring.data.mongodb.auto-index-creation=true
+server.port = 8081
 
 spring.data.mongodb.authentication-database = admin
 
