--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,5 @@
 
-spring.data.mongodb.uri=mongodb+srv://admin:adminadmin@cluster0.5oigr.gcp.mongodb.net/nasa-space-apps-challenge?retryWrites=true&w=majority
-
+spring.data.mongodb.uri={MONGO_URI}
 spring.data.mongodb.auto-index-creation=true
 server.port = 8081
 
