--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=cluster0.5oigr.gcp.mongodb.net
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=nasa-space-apps-challenge
-spring.data.mongodb.username=root
-spring.data.mongodb.password=rootroot
+spring.data.mongodb.username=admin	
+spring.data.mongodb.password=adminadmin
 spring.data.mongodb.auto-index-creation=true
 
 spring.data.mongodb.authentication-database = admin
