--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=nasa-space-apps-challenge
-spring.data.mongodb.username=admin	
-spring.data.mongodb.password=adminadmin
-spring.data.mongodb.auto-index-creation=true
-
-#spring.data.mongodb.uri=mongodb://admin:adminadmin@cluster0.5oigr.gcp.mongodb.net:27017/nasa-space-apps-challenge
-#spring.data.mongodb.uri=mongodb+srv://admin:adminadmin@cluster0.5oigr.gcp.mongodb.net/nasa-space-apps-challenge?retryWrites=true&w=majority
-
+##spring.data.mongodb.host=localhost
+##spring.data.mongodb.port=27017
+##spring.data.mongodb.database=nasa-space-apps-challenge
+##spring.data.mongodb.username=admin	
+##spring.data.mongodb.password=adminadmin
+##spring.data.mongodb.auto-index-creation=true
+#
+##spring.data.mongodb.uri=mongodb://admin:adminadmin@localhost:27017/nasa-space-apps-challenge
+#spring.data.mongodb.uri=mongodb+srv://admin:adminadmin@localhost/nasa-space-apps-challenge?retryWrites=true&w=majority
+#
 #spring.data.mongodb.authentication-database = admin
-
+#
