--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,3 +8,4 @@ spring.data.mongodb.auto-index-creation=true
 
 spring.data.mongodb.authentication-database = admin
 
+nasa-space-apps-challenge.application.allowedOrigin=http://localhost:4200
